# NetherEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  premake5.lua  setup-agilitysdk.bat  vcpkg.json
Assets/Shaders/: HelloTriangle.hlsl  HelloTriangleShader.hlsl  StaticSamplers.hlsli  TestShader.hlsl
CrystalEngine/: CMakeLists.txt
CrystalEngine/Source/: Main.cpp  Pch.hpp
NetherEngine/: CMakeLists.txt  Pch.cpp  Pch.hpp
NetherEngine/Common/: Common.hpp  PrimitiveTypes.hpp  Utils.hpp
NetherEngine/Core/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  Main.cpp
NetherEngine/Graphics/: CommandQueue.cpp  CommandQueue.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  GraphicsCommon.hpp  Resources.cpp  Resources.hpp  Shader.cpp  Shader.hpp
NetherEngine/Scene/: Camera.cpp  Camera.hpp
NetherEngine/Source/: Pch.hpp
NetherEngine/Source/Common/: DataTypes.hpp  Utils.cpp  Utils.hpp
NetherEngine/Source/Core/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  Main.cpp
NetherEngine/Source/Loaders/: ModelLoader.cpp  ModelLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
NetherEngine/Source/NetherEngine/: Application.cpp  Application.hpp  Camera.hpp  CommandQueue.cpp  CommandQueue.hpp  Common.hpp  DataTypes.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  Main.cpp  Model.cpp  Model.hpp  Resources.cpp  Resources.hpp  Shader.cpp  Shader.hpp  Utils.cpp  Utils.hpp
NetherEngine/Source/Rendering/: CommandQueue.cpp  CommandQueue.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  Device.cpp  Device.hpp  GraphicsCommon.cpp  GraphicsCommon.hpp  Resources.cpp  Resources.hpp  Shader.cpp  Shader.hpp  d3dx12.hpp
NetherEngine/Source/Scene/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp
include/: Pch.hpp
include/NetherEngine/: Camera.hpp  Engine.hpp  ShaderCompiler.hpp  Types.hpp  Utils.hpp
shaders/: Common.hlsli  CompileShaders.bat  GenerateMipMaps.hlsl  LightShader.hlsl  PhongShader.hlsl  StaticSamplers.hlsli  TestShader.hlsl  TriangleShader.hlsl
src/: Camera.cpp  Engine.cpp  Main.cpp  ShaderCompiler.cpp
